objects/MST_Chip_Association__c.object
<CustomObject>
    <fields>
        <fullName>Chip__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Chip Detail associated</description>
        <label>Chip</label>
        <referenceTo>Chip_Detail__c</referenceTo>
        <relationshipLabel>MST Chip Associations</relationshipLabel>
        <relationshipName>MST_Chip_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_Message_Oracle_DB__c</fullName>
        <label>Error_Message_Oracle_DB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Sync_Request_Timestamp__c</fullName>
        <label>Last_Sync_Request_Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mask_Set_Title__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Mask Set Title associated</description>
        <label>Mask Set Title</label>
        <referenceTo>Mask_Set_Title__c</referenceTo>
        <relationshipLabel>MST Chip Associations</relationshipLabel>
        <relationshipName>MST_Chip_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Synced_with_Oracle_DB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Synced_with_Oracle_DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lastmodifieddate_sgt__c</fullName>
        <label>lastmodifieddate_sgt</label>
        <type>DateTime</type>
    </fields>
    <label>MST Chip Association</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MCA-{000000}</displayFormat>
        <label>MST Chip Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MST Chip Associations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>